--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -80,17 +80,21 @@
 <p><span>40823242/應力分析、模擬、報告影片</span></p>
 <p><br/>主題簡述:</p>
 <p>在工地裡,經常需要用到台車搬運東西,例如裝著水泥的箱子,如果是要靠人力搬運的話,不僅會造成工作效率的減少,也會使搬運人員的體力大量消耗,所以討論過後,我們小組決定設計”省力搬運機”,不僅解決搬運問題,也大幅地提高工作效率與人員體力的損耗。</p>
-<h2>W11 直播影片</h2>
-<p><span>stage3-bg5-40823220 40823250</span><br/><span>主題:Task2、ipv4講解、作品的圖檔進度及講解和參考資料</span><br/><span>20號:圖檔說明</span><br/><span>50號:ipv4講解</span></p>
-<p><span>影片:</span></p>
-<p><span>一.</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></span></p>
-<p><span>二.</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></span></p>
-<h2>W12 直播影片</h2>
-<p><span>stage3-bg5</span><br/><span>40823205、40823228</span><br/><span>主題 : 解決CMSIMDE版本錯誤</span></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/sm5dSwAz2Z4" width="560"></iframe></p>
-<h2>W13 機械手臂控制、程式控制攀爬機</h2>
+<h2>W11 討論小組主題</h2>
+<p><strong data-mce-new="true">4月29討論結果</strong><br/><strong>主題:暫定<span>飛機或是汽車等之後再更改</span></strong></p>
+<p><strong><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qo33Pq-pSV8" width="560"></iframe></span></strong></p>
+<h2>W12 無障礙越野車繪製</h2>
+<p>1.<strong>stage3主題:無障礙越野車</strong></p>
+<p>2.動機:想要一台可以克服各種障礙地形的車子</p>
+<p>3.繪圖者:40823220</p>
+<p>4.機構:利用萬向接頭帶動蝸桿蝸輪</p>
+<p>5.想法:前後輪用雙向馬達驅動，萬象接頭用單向馬達，材料採中空鋁件設計使整體更輕，上面設置供電器</p>
+<p><img alt="" height="258" src="/images/%E7%84%A1%E9%9A%9C%E7%A4%99%E8%B6%8A%E9%87%8E%E8%BB%8A5.png" width="525"/></p>
+<p><img alt="" height="257" src="/images/%E7%84%A1%E9%9A%9C%E7%A4%99%E8%B6%8A%E9%87%8E%E8%BB%8A6.png" width="525"/></p>
+<p><img alt="" height="259" src="/images/%E7%84%A1%E9%9A%9C%E7%A4%99%E8%B6%8A%E9%87%8E%E8%BB%8A7.png" width="525"/></p>
+<p><img alt="" height="256" src="/images/%E7%84%A1%E9%9A%9C%E7%A4%99%E8%B6%8A%E9%87%8E%E8%BB%8A8.png" width="525"/></p>
+<p></p>
+<h2>W13 無障礙越野車修改</h2>
 <p><a href="https://40823220.github.io/cd2021/content/12.html">40823220網站</a></p>
 <p>本週主要為零件、產品大改良</p>
 <p>零件檔載點:<a href="https://40823220.github.io/cd2021/downloads/Desktop.rar">零件檔</a></p>
@@ -103,9 +107,7 @@
 <p>4.更改底板，因應前面所有改動，底板必須符合邏輯的變化</p>
 <p><img alt="" height="205" src="https://40823220.github.io/cd2021/images/777.bmp" width="400"/></p>
 <p>修改完成使零件數目減少後，使攀爬機在CoppeliaSim中可以順利完成地形攀爬模擬。</p>
-<p>模擬影片:</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/-IUVghi0gbQ" width="560"></iframe></p>
-<h2>W12-13coppelia模擬</h2>
+<p></p><h2>W12-13coppelia模擬</h2>
 <p>小組作品進度</p>
 <p>使用coppeliasim做初步模擬+lua控制</p>
 <p>說明:在場景中做初步的零件連接，並利用lua控制車子前進，但因為連接軸的問題，車子目前只能做前後移動和上下調整角度</p>
@@ -245,43 +247,16 @@ else:
 <p><strong>4月29討論結果</strong><br/><strong>主題:暫定<span>飛機或是汽車等之後再更改</span></strong></p>
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qo33Pq-pSV8" width="560"></iframe></strong></p>
 <h2>W12</h2>
-<p>1.<strong>stage3主題:無障礙越野車</strong></p>
-<p>2.動機:想要一台可以克服各種障礙地形的車子</p>
-<p>3.繪圖者:40823220</p>
-<p>4.機構:利用萬向接頭帶動蝸桿蝸輪</p>
-<p>5.想法:前後輪用雙向馬達驅動，萬象接頭用單向馬達，材料採中空鋁件設計使整體更輕，上面設置供電器</p>
-<p><img alt="" height="258" src="/images/無障礙越野車5.png" width="525"/></p>
-<p><img alt="" height="257" src="/images/無障礙越野車6.png" width="525"/></p>
-<p><img alt="" height="259" src="/images/無障礙越野車7.png" width="525"/></p>
-<p><img alt="" height="256" src="/images/無障礙越野車8.png" width="525"/></p>
-<p>----------------------------------------------------------------------------------------------------</p>
-<p>上課直播</p>
-<p><span>40823221 40823237</span><br/><span>主題: ipv4操作api</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></span></p>
-<p><span></span></p>
 <p><span>40823220 40823250<br/><span>主題:Task2、ipv4講解、作品的圖檔進度及講解和參考資料</span></span></p>
-<p><span><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></span></span></p>
-<h2>W13</h2>
-<p>本週主要為零件、產品大改良</p>
-<p>零件檔載點:<a href="https://40823220.github.io/cd2021/downloads/Desktop.rar">零件檔</a></p>
-<p>更進如下:</p>
-<p>1.輪胎加大，紋路朝前，為了讓摩擦力增加</p>
-<p><img alt="" height="269" src="/images/輪胎加大.png" width="525"/></p>
-<p><span>2.將單向馬達架高，直接驅動蝸桿蝸輪，省略多餘的萬象接頭，使模擬更容易</span></p>
-<p><span><img alt="" height="269" src="/images/單向馬達架高.png" width="525"/></span></p>
-<p>3.輪軸加大，使模擬安插軸更容易</p>
-<p>4.更改底板，因應前面所有改動，底板必須符合邏輯的變化</p>
-<p><img alt="" height="269" src="/images/更改底板.png" width="525"/></p>
-<p><span>5.將不動零件合併化，原本14件縮減到6件，使模擬大幅度容易</span></p>
-<p><span>----------------------------------------------------------------------------------------------------</span></p>
+<p><span><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></span></span></p><h2>W13</h2>
 <p>上課直播</p>
 <p>40823205 40823228</p>
 <p>主題:解決CMSIMDE版本錯誤</p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/sm5dSwAz2Z4" width="560"></iframe></p>
+<p><span></span></p>
 <p><span>40823220 40823250</span></p>
 <p><span>主題:介紹inventor及 reveal教學</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9L3157sRr2U" width="560"></iframe></span></p>
-<h2>W14</h2>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9L3157sRr2U" width="560"></iframe></span></p><h2>W14</h2>
 <p>線上同步教學</p>
 <p>第一次直播</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/npptDs_cz78" width="560"></iframe></p>
@@ -290,7 +265,10 @@ else:
 <h2>W15</h2>
 <p>上課直播影片</p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/mDPnTY_19A0" width="560"></iframe></span></p>
-<h1>Task2</h1>
+<p>於直播中討論出繪製新的攀爬地圖，使攀爬機能發揮攀爬技能</p>
+<p>1.新增越野車載點:<a href="https://40823220.github.io/cd2021/downloads/%E8%B6%8A%E9%87%8E%E8%BB%8A%E5%A0%B4%E6%99%AF1%E3%80%812.rar">越野車場景1、2 載點</a>。繪圖者:40823220 黃彥維</p>
+<p>2.開始模擬新場景，並串聯機械手臂模型，將機械手臂與我們stage3的場景做結合</p>
+<p>3.構想:利用機械手臂，搬取障礙物(場景1、2)供越野車爬行。</p><h1>Task2</h1>
 <h2>Stage 1</h2>
 <p><span style="background-color: #ffff00;">stage1-bg14<span style="background-color: #ffff00;"></span></span></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ex3o115nqDs" width="560"></iframe></p>
@@ -491,7 +469,7 @@ else:
 <p><img alt="" height="200" src="/images/coppeliaSim_IuMvTnVxZk.png" width="300"/></p>
 <h2>lua語法和按鍵介紹</h2>
 <p><strong>1.XXX=sim.getObjectHandle('joint')</strong></p>
-<p><span>說明:XXX為一自行定義的名詞，此指令定義XXX為一個連接軸，而('joint')為該軸在場景裡面的名稱</span></p>
+<p><span>說明:XXX是可以自己定義的名詞，此指令定義XXX為一個連接軸，('joint')為該軸在場景裡面的名稱</span></p>
 <p><strong>2.sim.setJointTargetPosition(XXX,90)</strong></p>
 <p>說明: XXX移動至90這個位置，或旋轉至90rad</p>
 <p><code class="py plain">若此為一自轉軸要將程式寫為sim.setJointTargetPosition(XXX,0</code><code class="py keyword">*</code><code class="py plain">math.pi</code><code class="py keyword">/</code><code class="py value">180</code><code class="py plain">)</code></p>
