--- a/reveal/index.html
+++ b/reveal/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>reveal.js – The HTML Presentation Framework</title>
+    <title>stage3-bg5</title>
 
     <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
     <meta name="author" content="Hakim El Hattab">
@@ -25,15 +25,12 @@
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
         <section>
-            <a href="https://revealjs.com">
-                <img src="https://static.slid.es/reveal/logo-v1/reveal-white-text.svg" alt="reveal.js logo" style="height: 180px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
-            </a>
-            <h3>The HTML Presentation Framework</h3>
-            <p>
-                <small>Created by <a href="http://hakim.se">Hakim El Hattab</a> and <a href="https://github.com/hakimel/reveal.js/graphs/contributors">contributors</a></small>
-            </p>
+            <h1>協同產品設計實習 報告</h1>
+            <h2>stage3-bg5</h2>
+        <p>
+        <small>成員 <a href="https://github.com/40823204/stage3-bg5">40823204</a> 和 <a href="https://github.com/40823205/stage3-bg5">40823205</a>和 <a href="https://github.com/40823220/stage3-bg5">40823220</a> 和<a href="https://github.com/40823221/stage3-bg5">40823221</a> 和 <a href="https://github.com/40823228/stage3-bg5">40823228</a>和<a href="https://github.com/40823237/stage3-bg5">40823237</a> 和 <a href="https://github.com/40823242/stage3-bg5">40823242和<a href="https://github.com/40823250/stage3-bg5">40823250</a> 和<a href="https://github.com/40832244/stage3-bg5">40832244</a> </a></small>
+        </p>
         </section>
-
         <section>
             <h2>Hello There</h2>
             <p>
