--- a/reveal/index.html
+++ b/reveal/index.html
@@ -32,42 +32,13 @@
         </p>
         </section>
         <section>
-            <h2>Hello There</h2>
-            <p>
-                reveal.js enables you to create beautiful interactive slide decks using HTML. This presentation will show you examples of what it can do.
-            </p>
+            <h2>專題主題-無障礙越野車</h2>
+            <p><img alt="" height="258" src="./../images/%E7%84%A1%E9%9A%9C%E7%A4%99%E8%B6%8A%E9%87%8E%E8%BB%8A5.png" width="525"/></p>
+            <h10>動機:看到以前學長做的四驅車及網路上的影片，經小組討論後，決定做一台可以克服各種障礙地形的車子。</h10>
         </section>
-
-        <!-- Example of nested vertical slides -->
         <section>
-            <section>
-                <h2>Vertical Slides</h2>
-                <p>Slides can be nested inside of each other.</p>
-                <p>Use the <em>Space</em> key to navigate through all slides.</p>
-                <br>
-                <a href="#" class="navigate-down">
-                    <img class="r-frame" style="background: rgba(255,255,255,0.1);" width="178" height="238" data-src="https://static.slid.es/reveal/arrow.png" alt="Down arrow">
-                </a>
-            </section>
-            <section>
-                <h2>Basement Level 1</h2>
-                <p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
-            </section>
-            <section>
-                <h2>Basement Level 2</h2>
-                <p>That's it, time to go back up.</p>
-                <br>
-                <a href="#/2">
-                    <img class="r-frame" style="background: rgba(255,255,255,0.1); transform: rotate(180deg);" width="178" height="238" data-src="https://static.slid.es/reveal/arrow.png" alt="Up arrow">
-                </a>
-            </section>
-        </section>
-
-        <section>
-            <h2>Slides</h2>
-            <p>
-                Not a coder? Not a problem. There's a fully-featured visual editor for authoring these, try it out at <a href="https://slides.com" target="_blank">https://slides.com</a>.
-            </p>
+           <h1>機構原理</h1>
+           <h2>利用蝸桿蝸輪，使車身中間可以做角度之變換，以便提升車子的穿越角。</h2>
         </section>
 
         <section data-auto-animate>
